# apifactory

./: .codecov.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  example_app.py  pyproject.toml
.github/workflows/: unittests.yml
apifactory/: app_factory.py  database.py  route_factory.py  router_methods.py  schemas.py  security.py  utils.py
autoapi/: app_factory.py  database.py  route_factory.py  router_methods.py  security.py  utils.py
docs/: requirements.txt
docs/source/: Configuration.rst  Installation.rst  Whatisnew.rst  conf.py  index.rst
tests/: test_app_factory.py  test_db.py  test_ratelimit.py  test_routes.py  test_security.py  test_utils.py
tests/testdb/: test.db
tests/testfiles/: test.json  test.yaml  test_ratelimit.yaml
