[tool.poetry]
name = "apifactory"
version = "0.3.0"
description = "package for automatically creating an api on an existing database"
authors = ["Sebastiaan Broekema <sebastiaanbroekema@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sebastiaanbroekema/apifactory"
homepage = "https://github.com/sebastiaanbroekema/apifactory"
keywords = ["API","automatic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet"
    ]

[tool.poetry.dependencies]
python = "~3.9"
fastapi="0.*"
python-jose="3.*"
pymssql="2.*"
bcrypt="3.*"
passlib= "1.*"
sqlalchemy="1.*"
pydantic= "1.*"
uvicorn= "0.*"
python-multipart = "0.*"
PyYAML = "5.*"

[tool.poetry.dev-dependencies]
black = "^21.5b2 "
commitizen = "^2.17.6"
pylint = "^2.8.3"
pytest-cov = "^2.12.1 "
requests = "^2.25.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
